Добавляет текст в body
Скелет-черновик

--- a/index.html
+++ b/index.html
@@ -2,16 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/style.css">
+    <title>Web Studio</title>
 </head>
 <body>
+<!-- Header menu-->
+<div>
 
+</div>
+
+<!-- Logo make order -->
+<div>
+    <h1> Эффективные решения для вашего бизнеса </h1>
+    <h3> Заказать услугу </h3>
+</div>
+
+<!-- Main work principles -->
+<div>
+<h3>Внимание к деталям</h3> 
+<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+
+<h3>Пунктуальность</h3>
+<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+
+<h3>Планирование</h3>
+<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+
+<h3>Современные технологии</h3>
+<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+</div>
+
+<!-- What we do -->
+<div>
+<h2>Чем мы занимаемся</h2>
+</div>
+
+<!-- Our team -->
+<div>
+<h2>Наша команда</h2>
+
+Игорь Демьяненко
+Product Designer
+
+Ольга Репина
+Frontend Developer
+
+Николай Тарасов
+Marketing
+
+Михаил Ермаков
+UI Designer
+
+</div>
 </body>
 </html>
