--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Studio</title>
+    <title>WebStudio</title>
 </head>
 <body>
 <!-- Header menu-->
+    <header>
+        <a lang="en" href="">WebStudio</a>
+        <nav>
+            <ul>
+                <li><a href="/">Студия</a></li>
+                <li><a href="/about">Портфолио</a></li>
+                <li><a href="/contact">Контакты</a></li>
+            </ul>
+        </nav>
+    </header>
 <div>
 
 </div>
