--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                 <li><a href="/contact">Контакты</a></li>
             </ul>
         </nav>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
-<div>
 
 </div>
 
