--- a/index.html
+++ b/index.html
@@ -1,70 +1,98 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-</head>
-<body>
-<!-- Header menu-->
+  </head>
+  <body>
+    <p>Главная</p>
+    <!-- Шапка-->
     <header>
-        <a lang="en" href="">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="/">Студия</a></li>
-                <li><a href="/about">Портфолио</a></li>
-                <li><a href="/contact">Контакты</a></li>
-            </ul>
-        </nav>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a lang="en" href="">WebStudio</a>
+      <nav>
+        <ul>
+          <li><a href="/">Студия</a></li>
+          <li><a href="/about">Портфолио</a></li>
+          <li><a href="/contact">Контакты</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
+    <section>
+      <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+      <button>Заказать услугу</button>
+    </section>
+    <main>
+      <!-- Особенности -->
+      <section>
+        <h4>ВНИМАНИЕ К ДЕТАЛЯМ</h4>
+        <p>
+          Идейные соображения, а также начало повседневной работы по
+          формированию позиции.
+        </p>
 
-</div>
+        <h4>ПУНКТУАЛЬНОСТЬ</h4>
+        <p>
+          Задача организации, в особенности же рамки и место обучения кадров
+          влечет за собой.
+        </p>
 
-<!-- Logo make order -->
-<div>
-    <h1> Эффективные решения для вашего бизнеса </h1>
-    <h3> Заказать услугу </h3>
-</div>
+        <h4>ПЛАНИРОВАНИЕ</h4>
+        <p>
+          Равным образом консультация с широким активом в значительной степени
+          обуславливает.
+        </p>
 
-<!-- Main work principles -->
-<div>
-<h3>Внимание к деталям</h3> 
-<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-
-<h3>Пунктуальность</h3>
-<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-
-<h3>Планирование</h3>
-<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-
-<h3>Современные технологии</h3>
-<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-</div>
-
-<!-- What we do -->
-<div>
-<h2>Чем мы занимаемся</h2>
-</div>
-
-<!-- Our team -->
-<div>
-<h2>Наша команда</h2>
-
-Игорь Демьяненко
-Product Designer
-
-Ольга Репина
-Frontend Developer
-
-Николай Тарасов
-Marketing
-
-Михаил Ермаков
-UI Designer
-
-</div>
-</body>
+        <h4>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h4>
+        <p>
+          Значимость этих проблем настолько очевидна, что реализация плановых
+          заданий.
+        </p>
+      </section>
+      <!-- Чем мызанимаемся -->
+      <section>
+        <h3>Чем мы занимаемся</h3>
+        <ul>
+          <li>
+            <img
+              src="./images/what-we-do-1.jpg"
+              alt="человек набирает код на ноутбуке"
+            />
+          </li>
+          <li>
+            <img src="./images/what-we-do-2.jpg" alt="телефон и ноутбук" />
+          </li>
+          <li>
+            <img
+              src="./images/what-we-d-3.jpg"
+              alt="цветовая диаграмма на планшете"
+            />
+          </li>
+        </ul>
+      </section>
+      <!-- Our team -->
+      <section>
+        <h3>Наша команда</h3>
+        <ul>
+          <li>
+            <img src="./images/team-card-1.jpg" alt="Игорь Демьяненко" />
+          </li>
+          <li><img src="./images/team-card-2.jpg" alt="Ольга Репина" /></li>
+          <li>
+            <img src="./images/team-card-3.jpg" alt="Николай Тарасов" />
+          </li>
+          <li><img src="./images/team-card-4.jpg" alt="Михаил Ермаков" /></li>
+        </ul>
+      </section>
+      <footer>
+        <a lang="en" href="">WebStudio</a>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
+      </footer>
+    </main>
+  </body>
 </html>
