--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </section>
       <!-- Чем мызанимаемся -->
       <section>
-        <h3>Чем мы занимаемся</h3>
+        <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -75,7 +75,7 @@
       </section>
       <!-- Our team -->
       <section>
-        <h3>Наша команда</h3>
+        <h2>Наша команда</h2>
         <ul>
           <li>
             <img src="./images/team-card-1.jpg" alt="Игорь Демьяненко" />
@@ -89,7 +89,7 @@
       </section>
       <footer>
         <a lang="en" href="">WebStudio</a>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
         <a href="mailto:info@example.com">info@example.com</a>
         <a href="tel:+380991111111">+38 099 111 11 11</a>
       </footer>
