добавляет width тегам img

--- a/index.html
+++ b/index.html
@@ -58,15 +58,21 @@
         <ul>
           <li>
             <img
+              width="pixels"
               src="./images/what-we-do-1.jpg"
               alt="человек набирает код на ноутбуке"
             />
           </li>
           <li>
-            <img src="./images/what-we-do-2.jpg" alt="телефон и ноутбук" />
+            <img
+              width="pixels"
+              src="./images/what-we-do-2.jpg"
+              alt="телефон и ноутбук"
+            />
           </li>
           <li>
             <img
+              width="pixels"
               src="./images/what-we-d-3.jpg"
               alt="цветовая диаграмма на планшете"
             />
@@ -78,13 +84,33 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/team-card-1.jpg" alt="Игорь Демьяненко" />
+            <img
+              width="pixels"
+              src="./images/team-card-1.jpg"
+              alt="Игорь Демьяненко"
+            />
           </li>
-          <li><img src="./images/team-card-2.jpg" alt="Ольга Репина" /></li>
           <li>
-            <img src="./images/team-card-3.jpg" alt="Николай Тарасов" />
+            <img
+              width="pixels"
+              src="./images/team-card-2.jpg"
+              alt="Ольга Репина"
+            />
           </li>
-          <li><img src="./images/team-card-4.jpg" alt="Михаил Ермаков" /></li>
+          <li>
+            <img
+              width="pixels"
+              src="./images/team-card-3.jpg"
+              alt="Николай Тарасов"
+            />
+          </li>
+          <li>
+            <img
+              width="pixels"
+              src="./images/team-card-4.jpg"
+              alt="Михаил Ермаков"
+            />
+          </li>
         </ul>
       </section>
       <footer>
