изменяет ширину на конкретную согласно макета

--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
         <ul>
           <li>
             <img
-              width="pixels"
+              width="370"
               src="./images/what-we-do-1.jpg"
               alt="человек набирает код на ноутбуке"
             />
           </li>
           <li>
             <img
-              width="pixels"
+              width="370"
               src="./images/what-we-do-2.jpg"
               alt="телефон и ноутбук"
             />
           </li>
           <li>
             <img
-              width="pixels"
+              width="370"
               src="./images/what-we-d-3.jpg"
               alt="цветовая диаграмма на планшете"
             />
@@ -85,28 +85,28 @@
         <ul>
           <li>
             <img
-              width="pixels"
+              width="270"
               src="./images/team-card-1.jpg"
               alt="Игорь Демьяненко"
             />
           </li>
           <li>
             <img
-              width="pixels"
+              width="270"
               src="./images/team-card-2.jpg"
               alt="Ольга Репина"
             />
           </li>
           <li>
             <img
-              width="pixels"
+              width="270"
               src="./images/team-card-3.jpg"
               alt="Николай Тарасов"
             />
           </li>
           <li>
             <img
-              width="pixels"
+              width="270"
               src="./images/team-card-4.jpg"
               alt="Михаил Ермаков"
             />
