--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
       </section>
       <footer>
         <a lang="en" href="">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <address>
+          г. Киев, пр-т Леси Украинки, 26
+          <a href="mailto:info@example.com">info@example.com</a>
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>
       </footer>
     </main>
   </body>
