изменяет our team section

--- a/index.html
+++ b/index.html
@@ -86,30 +86,38 @@
           <li>
             <img
               width="270"
-              src="./images/team-card-1.jpg"
+              src="./images/team-member-1.jpg"
               alt="Игорь Демьяненко"
             />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img
               width="270"
-              src="./images/team-card-2.jpg"
+              src="./images/team-member-2.jpg"
               alt="Ольга Репина"
             />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
               width="270"
-              src="./images/team-card-3.jpg"
+              src="./images/team-member-3.jpg"
               alt="Николай Тарасов"
             />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
               width="270"
-              src="./images/team-card-4.jpg"
+              src="./images/team-member-4.jpg"
               alt="Михаил Ермаков"
             />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
