изменяет секцию Чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -28,29 +28,39 @@
     <main>
       <!-- Особенности -->
       <section>
-        <h4>ВНИМАНИЕ К ДЕТАЛЯМ</h4>
-        <p>
-          Идейные соображения, а также начало повседневной работы по
-          формированию позиции.
-        </p>
+        <ul>
+          <li>
+            <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
 
-        <h4>ПУНКТУАЛЬНОСТЬ</h4>
-        <p>
-          Задача организации, в особенности же рамки и место обучения кадров
-          влечет за собой.
-        </p>
+          <li>
+            <h3>ПУНКТУАЛЬНОСТЬ</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
 
-        <h4>ПЛАНИРОВАНИЕ</h4>
-        <p>
-          Равным образом консультация с широким активом в значительной степени
-          обуславливает.
-        </p>
+          <li>
+            <h3>ПЛАНИРОВАНИЕ</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
 
-        <h4>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h4>
-        <p>
-          Значимость этих проблем настолько очевидна, что реализация плановых
-          заданий.
-        </p>
+          <li>
+            <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
       </section>
       <!-- Чем мызанимаемся -->
       <section>
