вносит правки ментора
12:06, 2 апр

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <p>Главная</p>
     <!-- Шапка-->
     <header>
       <a lang="en" href="">WebStudio</a>
@@ -21,11 +20,11 @@
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
-    <section>
-      <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-      <button>Заказать услугу</button>
-    </section>
     <main>
+      <section>
+        <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
       <!-- Особенности -->
       <section>
         <ul>
@@ -131,14 +130,14 @@
           </li>
         </ul>
       </section>
-      <footer>
-        <a lang="en" href="">WebStudio</a>
-        <address>
-          г. Киев, пр-т Леси Украинки, 26
-          <a href="mailto:info@example.com">info@example.com</a>
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
-      </footer>
     </main>
+    <footer>
+      <a lang="en" href="">WebStudio</a>
+      <address>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
+      </address>
+    </footer>
   </body>
 </html>
